# backend/src/main/java/com/dietiestate25backend/controller/MeteoController.java
@@ -9,7 +9,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.Map;
 
 @RestController
-@RequestMapping("/api/meteo")
+@RequestMapping("/meteo")
 public class MeteoController {
     private final MeteoService meteoService;
 
